style.css
footer li {
    width: 50%;
    font-style: italic;
}
form input {
    margin-bottom: 10px;
}

.req-div {
    float: left;
    width: 50%;
}

.req-div li {
    font-weight: bold;
}

/* overview */

body {
    margin: 0;
    font-family: Arial, sans-serif;
    background-color: #FAF9F6;
}

header {
    background-color: #333;
    color: white;
    padding: 20px;
    text-align: center;
}

header nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
}

header nav ul li {
    margin: 0 10px;
}

header nav a {
    color: white;
    font-size: larger;
    text-decoration: none;
}

#food {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    grid-gap: 10px;
    padding: 10px;
}

.images-flexbox {
    display: flex;
    flex-wrap: wrap;
    padding: 10px;
    gap: 20px;
}

.image-container {
    width: 350px;
    height: 300px;
    text-align: center;
    overflow: hidden;
    border-radius: 10px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.2), 0 6px 6px rgba(0,0,0,0.2);
}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.image-container p {
    padding: 10px;
    font-weight: bold;
}

.topic {
    display: flex;
    justify-content: center;
    color: Black;
}

#navbar {
    position: fixed;
    top: 0;
    width: 100%;
}

